force-app/main/default/objects/B2B_Product_Image__c/B2B_Product_Image__c.object-meta.xml
<CustomObject>
    <label>B2B Product Image</label>
    <nameField>
        <displayFormat>ProductImage-{000000}</displayFormat>
        <label>B2B Product Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Product Image</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>