force-app/main/default/objects/B2B_Product_Image__c/fields/B2B_External_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_External_Id__c</fullName>
    <description>Holds the external Id from the ERP.</description>
    <externalId>true</externalId>
    <label>B2B External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>