force-app/main/default/objects/B2B_Product_Image__c/fields/B2B_Image_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Image_Order__c</fullName>
    <label>Image Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>