force-app/main/default/objects/B2B_Product_Image__c/fields/B2B_Image_Title__c.field-meta.xml
<CustomField>
    <fullName>B2B_Image_Title__c</fullName>
    <label>Image Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>