force-app/main/default/objects/B2B_Product_Image__c/fields/B2B_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>