force-app/main/default/objects/B2B_Product_Image__c/fields/B2B_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Product Image</relationshipLabel>
    <relationshipName>B2B_Product_Image</relationshipName>
    <type>Lookup</type>
</CustomField>