force-app/main/default/objects/B2B_Product_Image__c/fields/D2C_Active__c.field-meta.xml
<CustomField>
    <fullName>D2C_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will specify the record status whether active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>