force-app/main/default/objects/B2B_Product_Image__c/fields/D2C_Available_In__c.field-meta.xml
<CustomField>
    <fullName>D2C_Available_In__c</fullName>
    <description>This field will specify the availability of the Image based on Business type</description>
    <label>Available In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D2C</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>VTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>