force-app/main/default/objects/B2B_Product_Image__c/fields/D2C_Product_Image_Type__c.field-meta.xml
<CustomField>
    <fullName>D2C_Product_Image_Type__c</fullName>
    <description>The field will help to identify the type of image stored</description>
    <label>D2C Product Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model Image</fullName>
            </value>
            <value>
                <fullName>Product Image</fullName>
            </value>
            <value>
                <fullName>Packaging Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>